# GoCode-2.0

./: .flake8  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
commands/: start_rabbitmq.sh  start_server.sh
src/: main.py
src/api/forum/: models.py
src/api/problems/: generate_test_data.py  models.py  repository.py  schemas.py  service.py  views.py
src/api/problems/utils/: rabbitmq.py  redis_.py
src/api/shared/: generate_test_data_view.py  middlewares.py  models.py  repository.py
src/api/shared/utils/: middlewares.py  pagination.py
src/api/users/: models.py  repository.py  schemas.py  views.py
src/api/users/auth/: models.py  repository.py  schemas.py  service.py  views.py
src/api/users/auth/services/: email.py
src/api/users/auth/utils/: permissions.py  sessions.py  utils.py
src/config/: db.py  settings.py
src/core/: models.py
src/logs/: config.py
src/migrations/: env.py
src/migrations/versions/: 1783a106c067_add_model_users.py  2024_12_14_0122-0104047a1406_add_solutions_table.py  2024_12_14_0220-00be102190a8_add_tables_posts_comments_and_sessions.py  2024_12_16_0110-b13c0432c0af_add_db_and_tables.py  2024_12_16_2157-75ce9c65d09e_add_db.py  204d4e743bdf_add_models_tasks_tests_languages_.py
src/tests/: conftest.py  test_problems.py  test_user.py
src/tests/utils/: db_operations.py
src/tests2/: conftest.py  test_blabla.py
testing_control/: Dockerfile  cfg.py  consumer.py  control.py  main.py
testing_control/commands/: start_testing_control.sh
testing_control/tests/task/: task_1.py
