[tool.poetry]
name = "gocode"
version = "0.1.0"
description = ""
authors = ["snickyyy <leon12345671234@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standart"], version = "^0.115.6"}
uvicorn = {extras = ["standart"], version = "^0.32.1"}
pydantic = "^2.10.3"
alembic = "^1.14.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
aiosqlite = "^0.20.0"
pydantic-settings = "^2.6.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^24.10.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
