[tool.poetry]
name = "gocode"
version = "0.1.0"
description = ""
authors = ["snickyyy <leon12345671234@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standart"], version = "^0.115.6"}
uvicorn = {extras = ["standart"], version = "^0.32.1"}
pydantic = "^2.10.3"
alembic = "^1.14.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
aiosqlite = "^0.20.0"
pydantic-settings = "^2.6.1"
sqlalchemy-utils = "^0.41.2"
bcrypt = "^4.2.1"
cryptography = "^44.0.0"
fastapi-mail = "^1.4.2"
six = "^1.17.0"
flake8 = "^7.1.1"
faker = "^33.1.0"
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.10"
aio-pika = "^9.5.4"
faststream = {extras = ["rabbit"], version = "^0.5.33"}
redis = "^5.2.1"
pika = "^1.3.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^24.10.0"
flake8 = "^7.1.1"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
